--- a/index.html
+++ b/index.html
@@ -73,9 +73,7 @@
               <a href="/#get-section" id="you-get">Ви отримуєте</a>
             </li>
             <li class="main-header_container_nav-list-items">
-              <a href="/#analisys-section" id="analisys-link"
-                >В основі аналізу</a
-              >
+              <a href="#" id="analisys-link">В основі аналізу</a>
             </li>
             <li class="main-header_container_nav-list-items">
               <a href="/#order-section" id="order-link">Як замовити послугу</a>
@@ -1680,5 +1678,6 @@
     <script src="scripts/script.js"></script>
     <script src="scripts/ageUa.js"></script>
     <script src="scripts/forms.js"></script>
+    <script src="scripts/menu.js"></script>
   </body>
 </html>
